--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -16,11 +16,13 @@
 .headerTitleLg{
     position: absolute;
     top: 20%;
+    color: white;
     font-size: 100px;
 }
 .headerImg{
+
     width: 100%;
     height: 450px;
-    margin-top: 80px;
+    margin-top: 60px;
     object-fit: cover;
 }
